@@ -54,8 +54,8 @@ WORKER7903.AUTHTYPE=NOAUTH
 WORKER7903.SIGNERCERTCHAIN=MIIDBzCCAe+gAwIBAgIBATANBgkqhkiG9w0BAQUFADAeMRwwGgYDVQQDExNUZXN0IFYzIENlcnRpZmljYXRlMB4XDTE1MDEwMTA5MDAwMFoXDTIwMDEwMTA5MDAwMFowHjEcMBoGA1UEAxMTVGVzdCBWMyBDZXJ0aWZpY2F0ZTCCASIwDQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEBAJq2VhSoCMsOCI4YyGAOWHJk+8GNkz9/xsqDd4+YCkXlpgBZvUrmCEhxd8IMS6LEvlAtv/TEGyh1FlL5ncUBFjPIbSvS7zM8f1gm06iNSdC9dVwTHhu+L+mvajuFWlUr/agPaCM9rvUcUE5bceRioM0ORway1uyGGg5agecLbEKEKB7mmmK4sJgwk6Ol/AbRk2bw2ep6XeZusEdplySTM3PFpbS97wRzJLQuo0pg9fZ3yTvxlgRFbOJ7uGVY1H1ac2RcgvC3E+oSxg5Hk/xFn7R1iGMukn2exPVp0lPOz+QHkgl+PefojU1MRTV4Nqf4jDp7zawhZz5yUvme3ZGg6tsCAwEAAaNQME4wHQYDVR0OBBYEFCGmTJsyJQ/esdU6lsZXShnqS0LtMC0GA1UdEAQmMCSgEBgOMjAyNTAxMDExMDAwMDChEBgOMjAzMDAxMDExMDAwMDAwDQYJKoZIhvcNAQEFBQADggEBAB61vYmr5fEuoN78Yiu3qZhOrJzA6I4D4F6NEX3vQOTfzjcdVLVRUhOmFHi33UfPcugWU1NtGLxa0nIdT+Pnc7AnoblBeNWNdYiM93DLHuQTwYyQVcQMlltHs2LhGesQ+LLijcTECm+t1/HTuhQcENbS3IUyvp1borH+txTh+YBWKVmrvis+2SlLZSF8MppNO4NysaEaehTHOn0XLy9LSXHypmTqR/Jx5kfG12OcAx58baIMPbTbGxqR1tNceKb7+Sjy+urIsX/0d4c1L1hohgpeJ2nbSeZ3SbSx/eNqhglBls/PSdEFqTpbAK7d+LfqkjDbKWbBiVFbkjAvj/aacdk\\=
 
 # Worker7904: Default algorithms, default hashing setting, SHA256WithECDSA
-#GLOB.WORKER7904.CLASSPATH = org.signserver.module.mrtdsodsigner.MRTDSODSigner
-#GLOB.WORKER7904.SIGNERTOKEN.CLASSPATH = org.signserver.server.cryptotokens.P12CryptoToken
-#WORKER7904.NAME=TestMRTDSODSigner5
-#WORKER7904.AUTHTYPE=NOAUTH
-#WORKER7904.SIGNATUREALGORITHM = SHA256withECDSA
+GLOB.WORKER7904.CLASSPATH = org.signserver.module.mrtdsodsigner.MRTDSODSigner
+GLOB.WORKER7904.SIGNERTOKEN.CLASSPATH = org.signserver.server.cryptotokens.P12CryptoToken
+WORKER7904.NAME=TestMRTDSODSigner5
+WORKER7904.AUTHTYPE=NOAUTH
+WORKER7904.SIGNATUREALGORITHM = SHA256withECDSA
